# Limno

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.MD  README.MD
include/: concepts.hh  config.hh
include/Core/: Interface design.txt  array_base.hh  debug_allocator.hh  expression_templates.hh  matrix_base.hh
tests/: CMakeLists.txt
tests/Array/: TestMatrixBase.cpp
tests/Matrix/: TestMatrixBase.cpp
